[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/seed.png" type="Texture" id=1]
[ext_resource path="res://assets/icon.png" type="Texture" id=2]
[ext_resource path="res://scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://scripts/Seed.gd" type="Script" id=4]
[ext_resource path="res://scripts/game_over.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.1502
height = 26.603

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 550.025, 338.077 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22.3239, 30.6198 )

[node name="Player" type="Node2D"]
script = ExtResource( 3 )

[node name="Seed" type="RigidBody2D" parent="."]
mass = 0.5
gravity_scale = 15.0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="seed_sprite" type="Sprite" parent="Seed"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="player_collision" type="CollisionShape2D" parent="Seed"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="slingshot_line" type="Line2D" parent="Seed"]
points = PoolVector2Array( 0, 0, 0, 0 )

[node name="player_camera" type="Camera2D" parent="Seed"]
offset = Vector2( 200, 0 )
current = true
__meta__ = {
"_edit_group_": true
}

[node name="block_area" type="Area2D" parent="." groups=[
"player",
]]
visible = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="block_area"]
position = Vector2( 200, 0 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="block_area"]
visible = false
modulate = Color( 0.972549, 0.972549, 0.972549, 0.368627 )
position = Vector2( 206.186, -1.05945 )
scale = Vector2( 17.1771, 10.5021 )
texture = ExtResource( 2 )

[node name="point_detector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="point_detector"]
rotation = 1.5708
shape = SubResource( 3 )

[node name="game_over" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.502
margin_top = 0.626939
margin_right = 850.498
margin_bottom = 40.6269
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="game_over"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.6787
margin_top = -241.606
margin_right = -310.679
margin_bottom = 218.394
color = Color( 0.556863, 0.556863, 0.556863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Label" parent="game_over/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -22.0
margin_top = 87.0
margin_right = 22.0
margin_bottom = 118.0
text = "Pontos
"
align = 3
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="game_over/ColorRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -10.0
margin_right = -163.0
margin_bottom = 10.0
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="game_over/ColorRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 161.0
margin_top = -10.0
margin_right = 209.0
margin_bottom = 10.0
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="game_over" from="Seed" to="game_over" method="_on_Seed_game_over"]
[connection signal="move" from="Seed" to="." method="_on_Seed_move"]
[connection signal="area_entered" from="point_detector" to="." method="_on_point_detector_area_entered"]
